--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "mobx": "^5.15.4",
+    "mobx-react-lite": "^2.0.7",    
+    "react-hook-inview": "^4.3.9",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
