--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "d3": "^6.7.0",
+    "mobx": "^5.15.4",
+    "mobx-react-lite": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1",
-    "mobx": "^5.15.4",
-    "mobx-react-lite": "^2.0.7",    
     "react-hook-inview": "^4.3.9",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
