--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.7",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
+    "react-d3-graph": "^2.6.0",
     "react-dom": "^17.0.2",
     "react-hook-inview": "^4.3.9",
     "react-router-dom": "^5.2.0",
