--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "d3": "^6.7.0",
+    "framer-motion": "^4.1.11",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.7",
     "react": "^17.0.2",
