--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "framer-motion": "^4.1.11",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.7",
+    "overlayscrollbars": "^1.13.1",
+    "overlayscrollbars-react": "^0.2.2",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
     "react-d3-graph": "^2.6.0",
