--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-inview": "^4.3.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "react-visibility-sensor": "^5.1.1",
     "web-vitals": "^1.0.1"
   },
